# template-opencv

./: README.md  file-setup.sh
test-package/: CMakeLists.txt  package.xml
test-package/src/: main.cpp  main.py
